# shc-cli

./: Cargo.toml  config.toml  install.sh  readme.md
src/: api_client.rs  app_config.rs  cli.rs  consts.rs  main.rs  models.rs  tui.rs  utils.rs
src/cli/: login.rs  mod.rs  share.rs
src/command/: add.rs  get.rs  list.rs  login.rs  mod.rs  remove.rs  rename.rs  visibility.rs
