[package]
name = "shc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.13"
dialoguer = "0.11.0"
dirs = "5.0.1"
serde =  {version = "1.0.195", features = ["derive"]} 
toml = "0.8.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.1"
mime_guess = "2.0.4"
console = "0.15.8"
prettytable = "0.10.0"
chrono = "0.4.31"
serde_json = "1.0.111"
indicatif = "0.17.7"
